- menambahkan object-fit di profile picture - mengganti ukuran col

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1049,8 +1049,9 @@ section {
   font-size: 13px;
 }
 .profile-picture {
-  height: 500px;
-  width: auto;
+  height: 425px;
+  width: 100%;
+  object-fit: contain;
 }
 .penelitian {
    display: flex;
